k3s/cluster/apps/nas-attached/music-ingest/filebrowser/service-filebrowser.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
  namespace: music-ingest
  labels:
    app.kubernetes.io/part-of: music-ingest
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/component: ui
spec:
  selector:
    app.kubernetes.io/name: filebrowser
    app.kubernetes.io/component: ui
  ports:
    - name: http
      port: 80
      targetPort: http
